--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: minima
+author: Joel Burbano
+title: Blog JXBS
+description: In this blog, I try to show my skills and abilities to able as a Data Scientist.
